# shiny_css_compilation_demo

./: justfile  pyproject.toml
shiny_css_compilation_demo/: main.py
