[tool.poetry]
name = "shiny-css-compilation-demo"
version = "0.1.0"
description = ""
authors = ["yuxt <yuxt@live.com>"]
readme = "README.md"
packages = [{include = "shiny_css_compilation_demo"}]

[tool.poetry.dependencies]
python = "3.10.11"
shiny = "1.1.0"


[tool.poetry.group.dev.dependencies]
libsass = "0.23.0"
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
